# rss2socials

./: .flake8  .gitignore  .mergify.yml  CHANGELOG.md  LICENSE  Makefile  README.md  constraints.txt  pyproject.toml  renovate.json  requirements-dev.txt  tox.ini
.github/workflows/: ci.yml
src/rss2socials/: __init__.py  __main__.py  cli.py
src/rss2socials/common/: metadata.py  openai_utils.py  rss_utils.py
src/rss2socials/connector/: bluesky.py
tests/: test_bluesky.py  test_cli.py  test_init.py  test_metadata.py  test_openai_utils.py  test_rss_utils.py
