[project]
name = "rss2socials"
version = "1.1.3"
description = "Modular Python CLI tool to automatically post new entries from an RSS or Atom feed to one or more social media platforms. Easily extensible, robust, and safe for automation and CI/CD workflows."
authors = [
    { name="Jeremy T. Bouse", email="Jeremy.Bouse@UnderGrid.net" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "atproto==0.0.61",
    "feedparser==6.0.11",
    "grapheme==0.6.0",
    "lxml>=5.3.0,<6.0.0",
    "lxml_html_clean==0.4.2",
    "openai==1.93.3",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "trafilatura==2.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "flake8",
    "importlib_metadata",
    "pytest",
    "python-semantic-release",
    "tox",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ugns/rss2socials"
Repository = "https://github.com/ugns/rss2socials"
Issues = "https://github.com/ugns/rss2socials/issues"
Changelog = "https://github.com/ugns/rss2socials/blob/main/CHANGELOG.md"

[project.scripts]
rss2socials = "rss2socials.__main__:main"

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install build
    python -m build --wheel --sdist
"""
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial Commit.*''',
  # Old semantic-release version commits
  '''^\d+\.\d+\.\d+''',
]
mode = "update"
